--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-picker-select": "^9.1.3",
     "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "react-native-web": "~0.19.10",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
